--- a/lib/patterns.less
+++ b/lib/patterns.less
@@ -644,6 +644,34 @@ input[type=submit].btn {
       border-color: lighten(#6bd0ee, 20%);
     }
   }
+
+  &.note {
+    position: relative;
+    border: 0;
+    &:after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      right:  0;
+      border-top:   16px solid #fbedb9;
+      border-right: 16px solid transparent;
+      display: block;
+      -webkit-box-shadow: -1px -1px 1px rgba(0, 0, 0, 0.3);
+      -moz-box-shadow: -1px -1px 1px rgba(0, 0, 0, 0.3);
+      box-shadow: -1px -1px 1px rgba(0, 0, 0, 0.3);
+      width: 0;
+    }
+    &:before {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      right:  0;
+      border-bottom: 16px solid #fff;
+      border-left:   16px solid transparent;
+      display: block;
+      width: 0;
+    }
+  }
 }
 
 
